add auto align buttons,