@@ -38,7 +38,7 @@ import frc.robot.subsystems.drive.ModuleIO;
 import frc.robot.subsystems.drive.ModuleIOSim;
 import frc.robot.subsystems.drive.ModuleIOSparkMax;
 import frc.robot.utility.OverrideSwitch;
-import java.util.List;
+import java.util.Arrays;
 import org.littletonrobotics.junction.networktables.LoggedDashboardChooser;
 
 /**
@@ -201,18 +201,19 @@ public class RobotContainer {
           new SpeedLevelController(SpeedLevelController.SpeedLevel.NO_LEVEL);
 
       final AdaptiveAutoAlignCommands reefAlignmentCommands =
-          new AdaptiveAutoAlignCommands(List.of(FieldConstants.Reef.aligmentFaces));
+          new AdaptiveAutoAlignCommands(Arrays.asList(FieldConstants.Reef.alignmentFaces));
       final AdaptiveAutoAlignCommands intakeAlignmentCommands =
-          new AdaptiveAutoAlignCommands(List.of(FieldConstants));
+          new AdaptiveAutoAlignCommands(Arrays.asList(FieldConstants.CoralStation.alignmentFaces));
 
       // Default command
       drive.setDefaultCommand(
           DriveCommands.joystickDrive(
-              drive,
-              input::getTranslationMetersPerSecond,
-              input::getOmegaRadiansPerSecond,
-              level::getCurrentSpeedLevel,
-              useFieldRelative::getAsBoolean));
+                  drive,
+                  input::getTranslationMetersPerSecond,
+                  input::getOmegaRadiansPerSecond,
+                  level::getCurrentSpeedLevel,
+                  useFieldRelative::getAsBoolean)
+              .withName("Default Drive"));
 
       // Cause the robot to resist movement by forming an X with the swerve modules
       driverXbox
@@ -221,6 +222,48 @@ public class RobotContainer {
               drive
                   .startEnd(drive::stopUsingBrakeArrangement, drive::stopUsingForwardArrangement)
                   .withName("Resist Movement With X"));
+
+      // Align to reef
+      driverXbox
+          .rightTrigger()
+          .onTrue(reefAlignmentCommands.driveToClosest(drive).withName("Drive to reef"));
+
+      Command reefDriveNextCommand =
+          reefAlignmentCommands.driveToNext(drive).withName("Drive to next reef");
+      driverXbox
+          .rightTrigger()
+          .and(driverXbox.leftBumper())
+          .onTrue(Commands.runOnce(reefDriveNextCommand::cancel))
+          .onTrue(reefDriveNextCommand);
+
+      Command reefDrivePreviousCommand =
+          reefAlignmentCommands.driveToPrevious(drive).withName("Drive to previous reef");
+      driverXbox
+          .rightTrigger()
+          .and(driverXbox.rightBumper())
+          .onTrue(Commands.runOnce(reefDrivePreviousCommand::cancel))
+          .onTrue(reefDrivePreviousCommand);
+
+      // Align to intake
+      driverXbox
+          .leftTrigger()
+          .onTrue(intakeAlignmentCommands.driveToClosest(drive).withName("Drive to intake"));
+
+      Command intakeDriveNextCommand =
+          intakeAlignmentCommands.driveToNext(drive).withName("Drive to next intake");
+      driverXbox
+          .leftTrigger()
+          .and(driverXbox.leftBumper())
+          .onTrue(Commands.runOnce(intakeDriveNextCommand::cancel))
+          .onTrue(intakeDriveNextCommand);
+
+      Command intakeDrivePreviousCommand =
+          intakeAlignmentCommands.driveToPrevious(drive).withName("Drive to previous intake");
+      driverXbox
+          .leftTrigger()
+          .and(driverXbox.rightBumper())
+          .onTrue(Commands.runOnce(intakeDrivePreviousCommand::cancel))
+          .onTrue(intakeDrivePreviousCommand);
 
       // Stop the robot and cancel any running commands
       driverXbox
